Fix accessibility issues, Level A, AA

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -150,6 +150,7 @@ a {
 .movies-holder .topbar-title {
   font-size: 2.23rem;
   line-height: 3.43rem;
+  font-weight: 700;
   font-family: "Barlow", sans-serif;
 }
 
